--- a/web-angular/lib/app_component.css
+++ b/web-angular/lib/app_component.css
@@ -1,23 +1,11 @@
-:host {
-    /* This is equivalent of the 'body' selector of a page. */
-}
-h1 {text-align: center;}
-nav a {
-    padding: 5px 10px;
-    text-decoration: none;
-    margin-top: 10px;
-    display: inline-block;
-    background-color: #eee;
+button {
+    margin-top: 20px;
+    font-family: Arial;
+    background-color: rgb(238, 238, 238);
+    border: none;
+    padding: 3px 10px;
     border-radius: 4px;
+    cursor: pointer; cursor: hand;
+    width:90px;height:50px
   }
-  nav a:visited, a:link {
-    color: #607D8B;
-  }
-  nav a:hover {
-    color: #039be5;
-    background-color: #CFD8DC;
-  }
-  nav a.active {
-    color: #039be5;
-  }
-  
+  .boxs{font-family:"幼圆"}
