--- a/web-angular/lib/src/test_component.css
+++ b/web-angular/lib/src/test_component.css
@@ -10,19 +10,23 @@ button {
     cursor: pointer; cursor: hand;
     width:90px;height:50px
   }
-
+.ul{
+  left:30%;
+  position: relative;
+}
 
 
   .tests {
     margin: 0 0 2em 0;
     list-style-type: none;
-    padding: 0;
+    position: relative;
+
     width: 15em;
   }
   .tests rl {
     cursor: pointer;
     position: relative;
-    left: 0;
+    left:30%;
     background-color: rgb(255, 255, 255);
     height: 1.6em;
     border-radius: 2px;
@@ -33,10 +37,12 @@ button {
   .tests rl:hover {
     color: #607D8B;
     background-color: #EEE;
-    left: .1em;
+    position: relative;
+
   }
   .tests .text {
     position: relative;
+
     top: -3px;
   }
   .tests .badge {
@@ -47,9 +53,10 @@ button {
     background-color: rgb(142, 148, 151);
     line-height: 1em;
     position: relative;
-    left: -1px;
+    left: 30%;
     top: -4px;
     height: 1.8em;
     margin-right: .8em;
     border-radius: 4px 0 0 4px;
   }
+
