--- a/web-angular/lib/src/score_component.css
+++ b/web-angular/lib/src/score_component.css
@@ -5,3 +5,18 @@
     padding: 0;
 
   }
+  h1 {
+    color: #369;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 250%;
+  }
+  h2 {
+    color: #444;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+  }
+  h3{
+    color: #369;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+  }
