--- a/web-angular/lib/src/test_component.css
+++ b/web-angular/lib/src/test_component.css
@@ -11,22 +11,36 @@ button {
     width:90px;height:50px
   }
 .ul{
-  left:30%;
+  left:220px;
   position: relative;
 }
-
+h1 {
+  color: #369;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 250%;
+}
+h2 {
+  color: #444;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: lighter;
+}
+h3{
+  color: #369;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: lighter;
+}
 
   .tests {
     margin: 0 0 2em 0;
     list-style-type: none;
     position: relative;
 
-    width: 15em;
+    width: 600px;
   }
   .tests rl {
     cursor: pointer;
     position: relative;
-    left:30%;
+    left:220px;
     background-color: rgb(255, 255, 255);
     height: 1.6em;
     border-radius: 2px;
@@ -49,13 +63,13 @@ button {
     display: inline-block;
     font-size: small;
     color: white;
-    padding: 0.8em 0.7em 0 0.7em;
+    padding: 0.8em 0.8em 0.8em 0.8em;
     background-color: rgb(142, 148, 151);
     line-height: 1em;
     position: relative;
-    left: 30%;
+    left: 220px;
     top: -4px;
-    height: 1.8em;
+    height: 2.2em;
     margin-right: .8em;
     border-radius: 4px 0 0 4px;
   }
