--- a/web-angular/lib/src/teststart_component.css
+++ b/web-angular/lib/src/teststart_component.css
@@ -9,3 +9,18 @@ button {
     width:90px;height:50px
   }
   .boxs{font-family:"幼圆"}
+  h1 {
+    color: #369;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 250%;
+  }
+  h2 {
+    color: #444;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+  }
+  h3{
+    color: #369;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+  }
