--- a/myangular/web/test.css
+++ b/myangular/web/test.css
@@ -2,19 +2,42 @@
 .boxs{font-family:"幼圆"}
 
 input{
-  display: block;
-  padding: 2px 152px;
+  display: inline;
+  padding: 2px 4px;
 }
 
 button {
-    margin-top: 20px;
-    font-family: Arial;
-    background-color: rgb(238, 238, 238);
-    border: none;
-    padding: 3px 10px;
-    border-radius: 4px;
-    cursor: pointer; cursor: hand;
-    width:90px;height:50px
+  top:5px;
+  text-shadow: 0 -1px 0 rgba(0,0,0,0.12);
+  -webkit-box-shadow: 0 2px 0 rgba(0,0,0,0.045);
+  box-shadow: 0 2px 0 rgba(0,0,0,0.045);
+  line-height: 1.499;
+  position: relative;
+  display: inline-block;
+  font-weight: 400;
+  white-space: nowrap;
+  text-align: center;
+  background-image: none;
+  border: 1px solid transparent;
+  -webkit-box-shadow: 0 2px 0 rgba(0,0,0,0.015);
+  box-shadow: 0 2px 0 rgba(0,0,0,0.015);
+  cursor: pointer;
+  -webkit-transition: all .3s cubic-bezier(.645, .045, .355, 1);
+  transition: all .3s cubic-bezier(.645, .045, .355, 1);
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  height: 32px;
+  padding: 0 15px;
+  font-size: 14px;
+  border-radius: 4px;
+  color: rgba(0,0,0,0.65);
+  background-color:  #F9F0DA;
+  border-color: #324B4E;
+  margin: 5px;
   }
 
 .ul{
@@ -44,18 +67,19 @@ h3{
 
     width: 600px;
   }
-  .tests rl {
+  .tests li {
     cursor: pointer;
     position: relative;
-    left:220px;
+    float: left;
     background-color: rgb(255, 255, 255);
+    
     height: 1.6em;
     border-radius: 2px;
   }
-  .tests rl.selected:hover {
+  .tests li.selected:hover {
     color: white;
   }
-  .tests rl:hover {
+  .tests li:hover {
     color: #607D8B;
     background-color: #EEE;
     position: relative;
@@ -68,17 +92,37 @@ h3{
   }
 
   .tests .badge {
-    display: block;
-    font-size: small;
+    display:block;
+    font-size: medium;
     color: white;
-    padding: 0.8em 0.8em 0.8em 0.8em;
+    padding: 0.4em;
     background-color: rgb(142, 148, 151);
     line-height: 1em;
     position: relative;
     left: 0px;
-    top: -4px;
-    height: 2.2em;
-    margin-right: 127px;
-    border-radius: 4px 0 0 4px;
+    top: 0px;
+    border-radius: 0;
+  }
+  .anwser{
+    
+    padding-top:10px;
+  }
+  a{
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #324B4E;
+  }
+  body {
+    top: 20px;
+    margin: 0 auto;
+    padding: 20px;
   }
 
+  #uppart{
+    height: 320px;
+    background-color: white;
+  }
+
+  #downpart{
+    background-color: white;
+  }
