--- a/myangular/web/teststart.css
+++ b/myangular/web/teststart.css
@@ -1,12 +1,35 @@
 button {
-    margin-top: 20px;
-    font-family: Arial;
-    background-color: rgb(238, 238, 238);
-    border: none;
-    padding: 3px 10px;
-    border-radius: 4px;
-    cursor: pointer; cursor: hand;
-    width:90px;height:50px
+  top:5px;
+  text-shadow: 0 -1px 0 rgba(0,0,0,0.12);
+  -webkit-box-shadow: 0 2px 0 rgba(0,0,0,0.045);
+  box-shadow: 0 2px 0 rgba(0,0,0,0.045);
+  line-height: 1.499;
+  position: relative;
+  display: inline-block;
+  font-weight: 400;
+  white-space: nowrap;
+  text-align: center;
+  background-image: none;
+  border: 1px solid transparent;
+  -webkit-box-shadow: 0 2px 0 rgba(0,0,0,0.015);
+  box-shadow: 0 2px 0 rgba(0,0,0,0.015);
+  cursor: pointer;
+  -webkit-transition: all .3s cubic-bezier(.645, .045, .355, 1);
+  transition: all .3s cubic-bezier(.645, .045, .355, 1);
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  height: 32px;
+  padding: 0 15px;
+  font-size: 14px;
+  border-radius: 4px;
+  color: rgba(0,0,0,0.65);
+  background-color:  #F9F0DA;
+  border-color: #324B4E;
+  margin: 5px;
   }
   .boxs{font-family:"幼圆"}
   h1 {
@@ -23,4 +46,9 @@ button {
     color: #369;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
+  }
+  a{
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #324B4E;
   }
